[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.getopts]

version = "*"
git = "https://github.com/silvio/rust-getopts.git"
branch = "sfr/Optiongroup-and-friends"

[dependencies]
args = "2.0"
